syntax = "proto3";

option go_package = "./pb";

package pb;


message TestReq{
    int64 testId = 1;
    string testStr = 2;
}

message TestResp{
    int64 ack = 1;
}


message TestDelayReq{
    int64 testId = 1;
    string testStr = 2;
    int64 time = 3;
}

message TestDelayResp{
    int64 ack = 1;
}

service Queue {
    //创建消息队列
    rpc TestQueue(TestReq) returns(TestResp);
    //延迟队列
    rpc TestDelay(TestDelayReq) returns(TestDelayResp);
  }
  